# Movie-Recommender-System

./: .gitignore  Movie recomendation system.ipynb  README.md  cinematch-key.pem  docker-compose.yml  movierec.py  requirements.txt
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: movies.py  recommend.py
backend/app/core/: config.py
backend/app/schemas/: movie.py  response.py
backend/app/services/: recommender.py  tmdb.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Footer.tsx  MovieCard.tsx  Navbar.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/pages/: HomePage.tsx  RecommendPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: themeStore.ts
frontend/src/styles/: components.css  global.css  pages.css  reset.css  variables.css
frontend/src/types/: index.ts
